<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="_01_Global_Variables" Id="{a6e8d5a7-2a79-41ff-b036-804688d67680}">
    <Declaration><![CDATA[{attribute 'Tc2GvlVarNames'}
VAR_GLOBAL
	DATA:						ST_States;	(*状态*)
//	gBox: 						ARRAY[0..23] OF ST_Box;(*箱子的状态*)
//	CLAMP:						APP_Clamp;(*实例化FB APP_Clmap*)
//	CONV:						APP_Conv;(*实例化FB APP_Conv*)

	RqSysManualModeIsActive,		(*需要在手动模式*)
	RqSysAutoModeIsActive,			(*需要在自动模式*)
	RqSysGoHome:				BOOL;(*需要回原点信号*)
	RqSysMachineRunInCycle: 	BOOL;(*需要设备在循环运行模式*)
	RqSysGoPauseState: 			BOOL;(*需要设备暂停*)
	Tem_Act			:LREAL;
	Tem_Act_1		:LREAL;
	Tem_control		:LREAL;
	Tem_control_1	:LREAL;
END_VAR
VAR_GLOBAL PERSISTENT(*断电保存型变量*)
	SET:							ST_Setting;	(*当前设定值*)
END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>